--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps = ArduinoQAPRS=https://bitbucket.org/Qyon/arduinoqaprs/downloads/ArduinoQAPRS-20150820.zip
+lib_deps = DRA818, TinyGPSPlus, ArduinoQAPRS=https://bitbucket.org/Qyon/arduinoqaprs/downloads/ArduinoQAPRS-20150820.zip
 
 [env:unotest]
 platform = atmelavr
