--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 #build_flags = ${common.build_flags}
+build_flags = -D DEBUG
 lib_deps = ${common.lib_deps}
 
 [env:nanotest]
