:sparkles: Add smart TX #8 + clean code

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,13 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [common]
-lib_deps = DRA818, TinyGPSPlus, ArduinoQAPRS=https://bitbucket.org/Qyon/arduinoqaprs/downloads/ArduinoQAPRS-20150820.zip
+lib_deps = DRA818, TinyGPSPlus, ArduinoQAPRS=https://bitbucket.org/valentintintin/arduinoqaprs/get/3fd5cb6341d5.zip
 
 [env:unotest]
 platform = atmelavr
 board = uno
 framework = arduino
+build_flags = -D DEBUG -D TEST
 lib_deps = ${common.lib_deps}
 
 [env:nanoprod]
@@ -27,5 +28,5 @@ lib_deps = ${common.lib_deps}
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-build_flags = -D DEBUG -D TEST
+build_flags = -D DEBUG
 lib_deps = ${common.lib_deps}
