:boom: Too much changes #1 SmartTX + Logger + button

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,4 +29,5 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 build_flags = -D DEBUG
+              #-D TEST -D CONTINUE_TX
 lib_deps = ${common.lib_deps}
