:wastebasket: Remove old FLAGS in code : show Serial info every time

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+; FLAGS :
+;   - TEST = Change comment in APRS message and set Frequency to 144.600 Mhz
+;   - CONTINUE_TX = Loop TX an AX25 TEST frame
+;   - USE_BUTTON = If a button is connected, if pushed during startup the program is in test mode (cf TEST). If pushed more than 5 seconds, send a frame
+;   - TX_30_S = Disable smart tx and send a frame every 30 seconds
+;
+
 [common]
 lib_deps = DRA818, TinyGPSPlus, ArduinoQAPRS=https://bitbucket.org/valentintintin/arduinoqaprs/get/3fd5cb6341d5.zip
 
@@ -15,7 +22,7 @@ lib_deps = DRA818, TinyGPSPlus, ArduinoQAPRS=https://bitbucket.org/valentintinti
 platform = atmelavr
 board = uno
 framework = arduino
-build_flags = -D DEBUG -D TEST
+build_flags = -D TEST -D TX_30_S
 lib_deps = ${common.lib_deps}
 
 [env:nanoprod]
@@ -23,11 +30,15 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 lib_deps = ${common.lib_deps}
+build_flags = -D USE_BUTTON
+              -D TX_30_S
 
 [env:nanotest]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-build_flags = -D DEBUG
-              #-D TEST -D CONTINUE_TX
+build_flags = -D TEST
+              #-D CONTINUE_TX
+              -D USE_BUTTON
+              -D TX_30_S
 lib_deps = ${common.lib_deps}
